<!--
  ~ Copyright (c) 2020-2021 Rich Braithwaite (rbraithwaite.dev@gmail.com)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Sleep Target</string>
    <string name="sleep_tracker_button_start">GOING TO SLEEP</string>
    <string name="sleep_tracker_button_stop">WAKING UP</string>
    <string name="common_session_times_start_title">Start time</string>
    <string name="common_session_times_end_title">End time</string>
    <string name="error_session_edit_start_datetime">The start time cannot be after the end time.</string>
    <string name="error_session_edit_end_datetime">The end time cannot be before the start time.</string>
    <string name="session_archive_delete_dialog_title">Delete session?</string>
    <string name="permanent_operation_message">This operation cannot be undone.</string>
    <string name="interruption_details_delete_title">Delete Interruption?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="sleep_goals_delete_waketime_dialog_title">Delete wake-time target?</string>
    <string name="sleep_goals_delete_duration_dialog_title">Delete sleep duration target?</string>
    <string name="close">Close</string>
    <plurals name="session_archive_item_more_tags_text">
        <item quantity="zero">error</item>
        <item quantity="other">+ %d more</item>
    </plurals>
    <string name="discard">Discard</string>
    <string name="postsleep_discard_title">Discard this session?</string>
    <string name="postsleep_discard_warning">This will clear all details about this session and cannot be undone.</string>
    <string name="postsleepdialog_nomood">No Mood</string>
    <string name="postsleepdialog_nocomments">No Comments</string>
    <string name="tracker_goal_waketime_title">Target Wake Time</string>
    <string name="tracker_goal_duration_title">Target Duration</string>
    <string name="session_future_time_error">Sessions cannot be set to a time in the future (this is to prevent real-time created sessions from causing overlaps).</string>
    <string name="tracker_interrupt_btn_resume">Resume Sleep</string>
    <string name="tracker_interrupt_btn_interrupt">Interrupt Sleep</string>
    <string name="interruption_details_overlap_error_title">Error: Overlapping Interruption</string>
    <string name="interruption_details_overlap_error_message">The set times overlap with an already existing interruption in this session, having these times:</string>
    <string name="no_tags">No Tags</string>
    <string name="about_version_num">Version %s</string>
    <string name="about_copyright">Copyright © 2020–2021 Rich Braithwaite</string>
    <!--    TODO [21-08-24 7:34PM] - set the right github link-->
    <string name="about_description">Sleep Target is a free and open-source sleep tracking app.
        Visit the project on <a href="https://github.com/rbraith/sleep-target">Github</a>!</string>
    <string name="about_credits_visual_assets">
        \u25CF Mood icons made by <a href="https://www.flaticon.com/authors/pixel-perfect">Pixel Perfect</a> from <a href="https://www.flaticon.com/">www.flaticon.com</a>
    </string>
    <string name="add_new_target">Add New Target</string>
    <string name="duration_target_help_1">
        The app checks for whether you\'ve underslept or overslept. You need to have a sleep session which…
    </string>
    <string name="duration_target_help_2">
        \u25CF <b>is within 10 minutes +/- of the target duration</b> (after subtracting interruptions), and either…\n
        \n
        \u25CF <b>started on that day and ended on the next day</b> (e.g. 11 p.m. to 7 a.m.), or…\n
        \n
        \u25CF <b>started on the next day and ended on the next day</b> (e.g. 1 a.m. to 9 a.m.)
    </string>
    <string name="waketime_target_help">
        To determine if you hit the wake-time target for a day, the app will look at <b>the most recently ended sleep session for that day</b>.\n
        \n
        The day hits the target if that sleep session <b>ends within 5 minutes +/- of the target</b>.
    </string>
    <string name="interruption_details_oob_start">
        This interruption has times set before the start of its sleep session:
    </string>
    <string name="interruption_details_oob_end">
        This interruption has times set after the end of its sleep session:
    </string>
    <string name="interruption_details_oob_end_message">That part of this interruption\'s duration won\'t be counted.</string>
    <string name="about_credits_title">Credits</string>
    <string name="about_credits_visual_title">Visual Assets</string>
    <string name="about_licenses_title">Third-party Licenses</string>
    <string name="about_view_btn_text">VIEW</string>
    <string name="about_privacy_title">Privacy Policy</string>
    <string name="error">Error</string>
    <string name="interruptions_count_title">Total Count</string>
    <string name="dev_tool_add_100">Add 100 Arbitrary Sleep Sessions</string>
    <string name="dev_tool_clear_data">Clear Database</string>
    <string name="dev_tool_add_goal_history">Maybe Add Historical Goal Data</string>
    <string name="dev_tool_crash">Crash The App</string>
    <string name="dev_tool_chart_targets">Add Chart Targets Test Data</string>
    <string name="dev_tool_promo_data">Clear Database Then Add Promo Data</string>
    <string name="dev_tool_promo_cal">Clear db then add promo target cal data</string>
    <string name="hour_short">h</string>
    <string name="minute_short">m</string>
    <string name="interruption_details_error_start_text">start:</string>
    <string name="interruption_details_error_end_text">end:</string>
    <string name="track">Track</string>
    <string name="archive">Archive</string>
    <string name="targets">Targets</string>
    <string name="stats">Stats</string>
    <string name="mood">Mood</string>
    <string name="common_interruptions_total_title">Total Time</string>
    <string name="interruptions_reason_hint">Interruption Reason (Optional)</string>
    <string name="postsleep_rating_title">Rate your sleep</string>
    <string name="postsleep_details_title">Sleep Details</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="postsleep_comments_title">Additional Comments</string>
    <string name="interruptions">Interruptions</string>
    <string name="no_interruptions">No interruptions.</string>
    <string name="tags">Tags</string>
    <string name="session_archive_list_item_start">Start:</string>
    <string name="session_archive_list_item_stop">End:</string>
    <string name="session_archive_no_data_text">No sleep sessions to display.</string>
    <string name="rating">Rating</string>
    <string name="session_details_interruptions_addbtn">Add Interruption</string>
    <string name="session_details_overlap_start_text">start:</string>
    <string name="session_details_overlap_end_text">end:</string>
    <string name="edit">Edit</string>
    <string name="wake_time">Wake Time</string>
    <string name="sleep_duration">Sleep Duration</string>
    <string name="sleep_goal_streaks_calendar_title">Target History</string>
    <string name="about">About</string>
    <string name="durations">Durations</string>
    <string name="stats_no_data">No data</string>
    <string name="duration">Duration</string>
    <string name="intervals">Intervals</string>
    <string name="stats_durations_resolution_10">10</string>
    <string name="stats_durations_resolution_50">50</string>
    <string name="stats_durations_resolution_100">100</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="sleep_rating">Sleep Rating</string>
    <string name="stats_durations_legend_target_text">Target Sleep Duration</string>
    <string name="sleep_session">Sleep Session</string>
    <string name="target_wake_time">Target Wake Time</string>
    <string name="midnight">Midnight</string>
    <string name="additional_comments_hint">Additional comments…</string>
    <string name="session_details_overlap_message">The set times overlap with an already existing sleep session having these times:</string>
    <string name="tag_add_btn_edittext_hint">Enter a tag…</string>
    <string name="tag_add_btn">Add New Tag</string>
    <string name="tracker_no_goals_text">No targets defined.</string>
    <string name="sleep_tracker_started_text">Started:</string>
    <string name="tracker_interrupt_reason_hint">Interruption Reason (Optional)</string>
    <string name="more_context_title">Optional Details</string>
    <string name="content_description_session_archive_list_item_comment_icon">session has comments</string>
    <string name="content_description_stats_range_selector_back">move chart range back</string>
    <string name="content_description_stats_range_selector_forward">move chart range forward</string>
    <string name="content_description_more_range_options">more range options</string>
    <string name="legend">Legend</string>
    <string name="duration_target_help_title">How do I hit a sleep duration target?</string>
    <string name="waketime_target_help_title">How do I hit a wake-time target?</string>
</resources>